--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@
                 <h1 class="bnr-title">Atención Piscológica para todos<span></span></h1>
                 <h2 class="bnr-sub-title">Terapia Psicológica online y telefónica</h2>
                 
-                <p class="bnr-para">2000 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<br> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip <br>ex ea commodo consequat.</p>
+                <p class="bnr-para"> Psicólogo Miguel Ángel Biciego
+                  <br>Egresado de la Universidad Nacional Autónoma de México</p>
                 
                 <div class="brn-btn">
                   <a href="#" class="btn btn-download">Download now!</a>
