Se agrega cambios en acerca de

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
               <div class="item-img">
                 <img src="img/ser01.png">
               </div>
-              <h3 class="pad-bt15">Creative Concept</h3>
+              <h3 class="pad-bt15">Atención presencial</h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
             </div>
           </div>
@@ -105,7 +105,7 @@
               <div class="item-img">
                 <img src="img/ser02.png">
               </div>
-              <h3 class="pad-bt15">Amazing Design</h3>
+              <h3 class="pad-bt15">Atención en línea</h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
             </div>
           </div>
@@ -114,7 +114,7 @@
               <div class="item-img">
                 <img src="img/ser03.png">
               </div>
-              <h3 class="pad-bt15">Cost effective</h3>
+              <h3 class="pad-bt15">Metodo de pago</h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
             </div>
           </div>
@@ -123,7 +123,7 @@
               <div class="item-img">
                 <img src="img/ser04.png">
               </div>
-              <h3 class="pad-bt15">Secure</h3>
+              <h3 class="pad-bt15">Medidas seguras de salud</h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
             </div>
           </div>
