Orotografía acerca de

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
               <div class="item-img">
                 <img src="img/ser03.png">
               </div>
-              <h3 class="pad-bt15">Metodo de pago</h3>
+              <h3 class="pad-bt15">Método de pago</h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
             </div>
           </div>
@@ -139,7 +139,7 @@
             <h2 class="service-title pad-bt15">¿Cómo te podemos apoyar?</h2>
             <p class="sub-title pad-bt15">Cansado del confinaiento en casa
               <br>Terapia especial para reducir el estrés, ansiedad, choque de caracteres con tu
-              <br>familia por el encierro; atiéndete y libérate de esas presiones</p>
+              <br>familia por el encierro; atiéndete y libérate de esas presiones.</p>
             <hr class="bottom-line">
           </div>
           <div class="col-md-3 col-sm-6 col-xs-12">
