Se agrega copyrights y design

--- a/index.html
+++ b/index.html
@@ -416,10 +416,10 @@
     <footer id="footer">
       <div class="container">
         <div class="row text-center">
-          <p>&copy; ProOnliPc Theme. All Rights Reserved.</p>
+          <p>&copy; Rodbi Systems Theme. All Rights Reserved.</p>
           <div class="credits">
         
-            Designed by <a href="https://www.youtube.com/channel/UCDH0DJaVLkCDtl_YN9hhByw/featured?view_as=subscriber">ProOnliPc</a>
+            Designed by <a href="">Software engineering Cuauhtémoc R.T.</a>
           </div>
         </div>
       </div>
