--- a/index.html
+++ b/index.html
@@ -54,7 +54,6 @@
                   <li class="active"><a href="#main-header">Inicio</a></li>
                   <li class=""><a href="#feature">Acerca de</a></li>
                   <li class=""><a href="#service">Terapia psicológica</a></li>
-                  <li class=""><a href="#portfolio">Portfolio</a></li>
                   <li class=""><a href="#testimonial">Testimonial</a></li>
                   <li class=""><a href="#blog">Blog</a></li>
                   <li class=""><a href="#contact">Contacto</a></li>
@@ -182,15 +181,15 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12 text-center">
-            <h2 class="service-title pad-bt15">Our Recent Works</h2>
-            <p class="sub-title pad-bt15">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod<br>tempor incididunt ut labore et dolore magna aliqua.</p>
+            <h2 class="service-title pad-bt15">¿Qué es el estrés?</h2>
+            <p class="sub-title pad-bt15"><br></p>
             <hr class="bottom-line">
           </div>
           <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item padding-right-zero mr-btn-15">
             <figure>
               <img src="img/port01.jpg" class="img-responsive">
               <figcaption>
-                <h2>Project For Everyone</h2>
+                <h2></h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nost.</p>
               </figcaption>
             </figure>
