--- a/index.html
+++ b/index.html
@@ -380,28 +380,28 @@
               <form action="" method="post" role="form" class="contactForm">
                 <div class="col-md-6 padding-right-zero">
                   <div class="form-group">
-                    <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
+                    <input type="text" name="name" class="form-control" id="name" placeholder="Tu nombre" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
                     <div class="validation"></div>
                   </div>
                 </div>
                 <div class="col-md-6">
                   <div class="form-group">
-                    <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email" />
+                    <input type="email" class="form-control" name="email" id="email" placeholder="Tu correo" data-rule="email" data-msg="Please enter a valid email" />
                     <div class="validation"></div>
                   </div>
                 </div>
                 <div class="col-md-12">
                   <div class="form-group">
-                    <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" />
+                    <input type="text" class="form-control" name="subject" id="subject" placeholder="Objetivo" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" />
                     <div class="validation"></div>
                   </div>
                 </div>
                 <div class="col-md-12">
                   <div class="form-group">
-                    <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Please write something for us" placeholder="Message"></textarea>
+                    <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Please write something for us" placeholder="Mensaje"></textarea>
                     <div class="validation"></div>
                   </div>
-                  <button type="submit" class="btn btn-primary btn-submit">SEND NOW</button>
+                  <button type="submit" class="btn btn-primary btn-submit">Enviar</button>
                 </div>
               </form>
 
@@ -418,7 +418,7 @@
           <p>&copy; Rodbi Systems Theme. All Rights Reserved.</p>
           <div class="credits">
         
-            Designed by <a href="">Software engineering Cuauhtémoc R.T.</a>
+            Designed by <a href="">Software Engineering Cuauhtémoc R.T.</a>
           </div>
         </div>
       </div>
