--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12 text-center">
-            <h2 class="service-title pad-bt15">Latest from our blog</h2>
+            <h2 class="service-title pad-bt15">Terapia emocional</h2>
             <p class="sub-title pad-bt15">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod<br>tempor incididunt ut labore et dolore magna aliqua.</p>
             <hr class="bottom-line">
           </div>
