Se agrega nav terapia emocional

--- a/index.html
+++ b/index.html
@@ -54,8 +54,7 @@
                   <li class="active"><a href="#main-header">Inicio</a></li>
                   <li class=""><a href="#feature">Acerca de</a></li>
                   <li class=""><a href="#service">Terapia psicológica</a></li>
-                  <li class=""><a href="#testimonial">Testimonial</a></li>
-                  <li class=""><a href="#blog">Blog</a></li>
+                  <li class=""><a href="#blog">Terapia emocional</a></li>
                   <li class=""><a href="#contact">Contacto</a></li>
                 </ul>
               </div>
