--- a/index.html
+++ b/index.html
@@ -72,8 +72,7 @@
                   <br>Egresado de la Universidad Nacional Autónoma de México</p>
                 
                 <div class="brn-btn">
-                  <a href="#" class="btn btn-download">Download now!</a>
-                  <a href="#" class="btn btn-more">Learn More</a>
+                  <a href="#" class="btn btn-download">Haz tu cita en Whatsapp!</a>
                 </div>
                 <div class="overlay-detail">
                   <a href="#feature"><i class="fa fa-angle-down"></i></a>
