cambio de piscolog por doctor

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <h1 class="bnr-title">Atención Piscológica para todos<span></span></h1>
                 <h2 class="bnr-sub-title">Terapia Psicológica online y telefónica</h2>
                 
-                <p class="bnr-para"> Psicólogo Miguel Ángel Biciego
+                <p class="bnr-para"> Dr. Miguel Ángel Biciego
                   <br>Egresado de la Universidad Nacional Autónoma de México</p>
                 
                 <div class="brn-btn">
