--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
           <div class="col-md-6 col-sm-6 col-xs-12">
             <div class="loction-info white">
               <p><i class="fa fa-map-marker fa-fw pull-left fa-2x"></i>Calzada Tlanpan<br>Benito Juárez, 64000</p>
-              <p><i class="fa fa-envelope-o fa-fw pull-left fa-2x"></i>migelB@gmail.com</p>
+              <p><i class="fa fa-envelope-o fa-fw pull-left fa-2x"></i>drmiguelbiciego@gmail.com</p>
               <p><i class="fa fa-phone fa-fw pull-left fa-2x"></i>+777 149 1940</p>
             </div>
           </div>
