Hide text in Acerca de

--- a/index.html
+++ b/index.html
@@ -94,7 +94,9 @@
                 <img src="img/ser01.png">
               </div>
               <h3 class="pad-bt15">Atención presencial</h3>
+              <!-- Text Box
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+              -->
             </div>
           </div>
           <div class="col-md-3 col-sm-6 col-xs-12">
@@ -103,7 +105,9 @@
                 <img src="img/ser02.png">
               </div>
               <h3 class="pad-bt15">Atención en línea</h3>
+              <!-- Text Box
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+              -->
             </div>
           </div>
           <div class="col-md-3 col-sm-6 col-xs-12">
@@ -112,7 +116,9 @@
                 <img src="img/ser03.png">
               </div>
               <h3 class="pad-bt15">Método de pago</h3>
+              <!---Text Box
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+              -->
             </div>
           </div>
           <div class="col-md-3 col-sm-6 col-xs-12">
@@ -121,7 +127,9 @@
                 <img src="img/ser04.png">
               </div>
               <h3 class="pad-bt15">Medidas seguras de salud</h3>
+              <!--
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+              -->
             </div>
           </div>
         </div>
@@ -261,7 +269,7 @@
       </div>
     </section>
     <!---->
-    <!---->
+    <!--
     <section id="testimonial" class="wow fadeInUp delay-05s">
       <div class="bg-testicolor">
         <div class="container section-padding">
@@ -302,6 +310,7 @@
         </div>
       </div>
     </section>
+    -->
     <!---->
     <section id="blog" class="section-padding wow fadeInUp delay-05s">
       <div class="container">
