se agrega section Consulta psicologica

--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12 text-center">
-            <h2 class="service-title pad-bt15">Terapia emocional</h2>
+            <h2 class="service-title pad-bt15">Consulta psicológica</h2>
             <p class="sub-title pad-bt15">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod<br>tempor incididunt ut labore et dolore magna aliqua.</p>
             <hr class="bottom-line">
           </div>
@@ -378,6 +378,57 @@
                 <p>We cannot expect people to have respect for laws and orders until we teach respect to those we have entrusted to enforce those laws all the time. we always want to help people cordially.</p>
                 <a href="" class="read-more">Read more →</a>
               </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!---->
+    <section id="service" class="section-padding wow fadeInUp delay-05s">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12 text-center">
+            <h2 class="service-title pad-bt15">Consulta psicológica</h2>
+            <p class="sub-title pad-bt15"></p>
+            <hr class="bottom-line">
+          </div>
+          <div class="col-md-3 col-sm-6 col-xs-12">
+            <div class="service-item">
+              <h3><span>I</span>nformación sobre la consulta Psicológica</h3>
+              <p>-Duración. Cada consulta dura 50 minutos pero se pide que llegues 10 min. antes.
+              <br>-Frecuencia. Se recomienda 1 consulta por semana para obtener mayores avances.
+              <br>-Duración del tratamiento. El tiempo varía entre cada paciente y puede ser de 1 y hasta 6 meses.
+              <br>-Cerca de ti. Ubicación céntrica, segura con el horario más amplio de consulta psicológica en CDMX
+              </p>
+
+            </div>
+          </div>
+
+          <div class="col-md-3 col-sm-6 col-xs-12">
+            <div class="service-item">
+              <h3><span>C</span>ómo reservar tu primera consulta psicológica?</h3>
+              <p>1. HAZ TU CITA. Manda un Whatsapp, llama por teléfono o reserva en línea. COMIENZA AHORA!
+              <br>2. SELECCIONA EL DÍA. Elige el tipo y la hora de terapia 
+              <br>3. REIBE UN TALÓN DE PAGO. Elige donde pagar, Seven-11 o trasferencia bancaria. Al liquidarlo recibiras confirmación de tu cita.
+              <br>4. ASISTE A TU CONSULTA. Un terpeuta especializado te estará esperando el día y hora que elegiste para tu consulta</p>
+
+            </div>
+          </div>
+          <div class="col-md-3 col-sm-6 col-xs-12">
+            <div class="service-item">
+              <h3><span>C</span>ómo es la consulta</h3>
+              <p>-Duración. Cada consulta dura 50 minutos pero se estés presente 10 min. antes.
+              <br>-Frecuencia. A dicreción de la opinión del terapeuta, se recomienda 1 consulta por semana.
+              <br>-Duración del tratamiento. La duración del tratamiento varía 
+              </p>
+
+            </div>
+          </div>
+          <div class="col-md-3 col-sm-6 col-xs-12">
+            <div class="service-item">
+              <h3><span>P</span>rimera consulta psicológica</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+
             </div>
           </div>
         </div>
