Se agegaron imagenes

--- a/index.html
+++ b/index.html
@@ -145,31 +145,31 @@
           </div>
           <div class="col-md-3 col-sm-6 col-xs-12">
             <div class="service-item">
-              <h3><span>T</span>ratamiento contra el estrés</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-              <a href="">learn more...</a>
+              <h3><span></span>Terapia:</h3>
+              <p></p>
+              <a href=""></a>
             </div>
           </div>
 
           <div class="col-md-3 col-sm-6 col-xs-12">
             <div class="service-item">
-              <h3><span>T</span>erapia individual</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-              <a href="">learn more...</a>
+              <h3><span>I</span>ndivdual</h3>
+              <p></p>
+              <a href=""></a>
             </div>
           </div>
           <div class="col-md-3 col-sm-6 col-xs-12">
             <div class="service-item">
-              <h3><span>T</span>erapia de pareja</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-              <a href="">learn more...</a>
+              <h3><span>P</span>areja</h3>
+              <p></p>
+              <a href=""></a>
             </div>
           </div>
           <div class="col-md-3 col-sm-6 col-xs-12">
             <div class="service-item">
-              <h3><span>T</span>erapia famliar</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-              <a href="">Learn more...</a>
+              <h3><span>F</span>amliar</h3>
+              <p></p>
+              <a href=""></a>
             </div>
           </div>
         </div>
@@ -312,8 +312,8 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12 text-center">
-            <h2 class="service-title pad-bt15">Consulta psicológica</h2>
-            <p class="sub-title pad-bt15">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod<br>tempor incididunt ut labore et dolore magna aliqua.</p>
+            <h2 class="service-title pad-bt15">Quédate en casa</h2>
+            <p class="sub-title pad-bt15">Terapia por:</p>
             <hr class="bottom-line">
           </div>
           <div class="col-md-4 col-sm-6 col-xs-12">
@@ -324,7 +324,7 @@
                 </a>
               </div>
               <div class="blog-info">
-                <h2>This is Lorem ipsum heading.</h2>
+                <h2>FaceTime</h2>
                 <div class="blog-comment">
                   <p>Posted In: <span>Legal Advice</span></p>
                   <p>
@@ -344,7 +344,7 @@
                 </a>
               </div>
               <div class="blog-info">
-                <h2>This is Lorem ipsum heading.</h2>
+                <h2>Zoom</h2>
                 <div class="blog-comment">
                   <p>Posted In: <span>Legal Advice</span></p>
                   <p>
@@ -364,7 +364,7 @@
                 </a>
               </div>
               <div class="blog-info">
-                <h2>This is Lorem ipsum heading.</h2>
+                <h2>WhatsApp</h2>
                 <div class="blog-comment">
                   <p>Posted In: <span>Legal Advice</span></p>
                   <p>
