--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
           </div>
           <div class="col-md-3 col-sm-6 col-xs-12">
             <div class="service-item">
-              <h3><span>I</span>nformación sobre la consulta Psicológica</h3>
+              <h3><span>I</span>Tratamiento contra la depresión</h3>
               <p>-Duración. Cada consulta dura 50 minutos pero se pide que llegues 10 min. antes.
               <br>-Frecuencia. Se recomienda 1 consulta por semana para obtener mayores avances.
               <br>-Duración del tratamiento. El tiempo varía entre cada paciente y puede ser de 1 y hasta 6 meses.
