update banner tratamiento contra la depresíon

--- a/index.html
+++ b/index.html
@@ -376,13 +376,13 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12 text-center">
-            <h2 class="service-title pad-bt15">Consulta psicológica</h2>
+            <h2 class="service-title pad-bt15">Tratamiento contra la depresión</h2>
             <p class="sub-title pad-bt15"></p>
             <hr class="bottom-line">
           </div>
           <div class="col-md-3 col-sm-6 col-xs-12">
             <div class="service-item">
-              <h3><span>I</span>Tratamiento contra la depresión</h3>
+              <h3><span>I</span>nformación sobre la consulta Psicológica</h3>
               <p>-Duración. Cada consulta dura 50 minutos pero se pide que llegues 10 min. antes.
               <br>-Frecuencia. Se recomienda 1 consulta por semana para obtener mayores avances.
               <br>-Duración del tratamiento. El tiempo varía entre cada paciente y puede ser de 1 y hasta 6 meses.
