update banner tratamiento contra la depresíon1

--- a/index.html
+++ b/index.html
@@ -382,11 +382,15 @@
           </div>
           <div class="col-md-3 col-sm-6 col-xs-12">
             <div class="service-item">
-              <h3><span>I</span>nformación sobre la consulta Psicológica</h3>
-              <p>-Duración. Cada consulta dura 50 minutos pero se pide que llegues 10 min. antes.
-              <br>-Frecuencia. Se recomienda 1 consulta por semana para obtener mayores avances.
-              <br>-Duración del tratamiento. El tiempo varía entre cada paciente y puede ser de 1 y hasta 6 meses.
-              <br>-Cerca de ti. Ubicación céntrica, segura con el horario más amplio de consulta psicológica en CDMX
+              <h3><span>S</span>i la tristeza, la culpa, los sentimientos de</h3>
+              <p>inutilidad, la ansiedad, los pensamientos acelerados,
+                los problemas para dormir o
+                comer o cualquier otro síntoma han 
+                comenzado a interferir con tu vida laboral,
+                social o personal, o si experimentas un
+                cambio repentino de humor que lo hace
+                sentir "que no eres tú" tal vez sea el momento
+                de buscar ayuda.
               </p>
 
             </div>
