--- a/index.html
+++ b/index.html
@@ -382,8 +382,9 @@
           </div>
           <div class="col-md-3 col-sm-6 col-xs-12">
             <div class="service-item">
-              <h3><span>S</span>i la tristeza, la culpa, los sentimientos de</h3>
-              <p>inutilidad, la ansiedad, los pensamientos acelerados,
+              <h3><span>S</span>i la tristeza, la </h3>
+              <p>culpa, los sentimientos de
+                inutilidad, la ansiedad, los pensamientos acelerados,
                 los problemas para dormir o
                 comer o cualquier otro síntoma han 
                 comenzado a interferir con tu vida laboral,
