update banner tratamiento contra la depresíon2

--- a/index.html
+++ b/index.html
@@ -399,11 +399,15 @@
 
           <div class="col-md-3 col-sm-6 col-xs-12">
             <div class="service-item">
-              <h3><span>C</span>ómo reservar tu primera consulta psicológica?</h3>
-              <p>1. HAZ TU CITA. Manda un Whatsapp, llama por teléfono o reserva en línea. COMIENZA AHORA!
-              <br>2. SELECCIONA EL DÍA. Elige el tipo y la hora de terapia 
-              <br>3. REIBE UN TALÓN DE PAGO. Elige donde pagar, Seven-11 o trasferencia bancaria. Al liquidarlo recibiras confirmación de tu cita.
-              <br>4. ASISTE A TU CONSULTA. Un terpeuta especializado te estará esperando el día y hora que elegiste para tu consulta</p>
+              <h3>¿</h3>
+              <h3><span>Q</span>ué es la depresión?</h3>
+              <p>La depresión es una afección grave y común que afecta la forma en la que te sientes,
+                piensas y actúas pero no te preocupes es totalmente tratable.
+                <br>Aunque típicamente se caracteriza por sentimientos de tristeza, los síntomas
+                de depresión también pueden aparecer como irritabilidad, apatía o desinterés. Las tareas
+                sencillas ahora pueden llevarte más tiempo debido a la falta de concentración.
+                <br>Requisitos: No requiere evaluaciones previas.
+              </p>
 
             </div>
           </div>
