update banner tratamiento contra la depresíon2

--- a/index.html
+++ b/index.html
@@ -399,8 +399,8 @@
 
           <div class="col-md-3 col-sm-6 col-xs-12">
             <div class="service-item">
-              <h3>¿</h3>
-              <h3><span>Q</span>ué es la depresión?</h3>
+              
+              <h3>¿<span>Q</span>ué es la depresión?</h3>
               <p>La depresión es una afección grave y común que afecta la forma en la que te sientes,
                 piensas y actúas pero no te preocupes es totalmente tratable.
                 <br>Aunque típicamente se caracteriza por sentimientos de tristeza, los síntomas
