update banner tratamiento contra la depresíon3

--- a/index.html
+++ b/index.html
@@ -413,10 +413,12 @@
           </div>
           <div class="col-md-3 col-sm-6 col-xs-12">
             <div class="service-item">
-              <h3><span>C</span>ómo es la consulta</h3>
-              <p>-Duración. Cada consulta dura 50 minutos pero se estés presente 10 min. antes.
-              <br>-Frecuencia. A dicreción de la opinión del terapeuta, se recomienda 1 consulta por semana.
-              <br>-Duración del tratamiento. La duración del tratamiento varía 
+              <h3><span>O</span>bjetivo de la terapia contra la depresión</h3>
+              <p>Dar un tratamiento profesional a personas con síntomas
+                de depresión que pueden incluir terapia psicológica
+                psqiquiátrica, grupos de ayuda y cualquier tratamiento que
+                tu terapeuta quiera probar. El tratamiento correcto es aquel
+                que te sirve a ti.
               </p>
 
             </div>
