update banner tratamiento contra la depresíon4

--- a/index.html
+++ b/index.html
@@ -425,8 +425,21 @@
           </div>
           <div class="col-md-3 col-sm-6 col-xs-12">
             <div class="service-item">
-              <h3><span>P</span>rimera consulta psicológica</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+              <h3><span>S</span>intomas de depresión
+              ¿Cómo saber si tienes depresión?
+              </h3>
+              <p>La deperesión puede presentar algunos o todos los 
+                siguientes síntomas durante más de dos semanas:
+                <br>-Triteza prolognada.
+                <br>-Llanto súbitos inexplicables.
+                <br>-Cambios en el apetito y los patrones de sueñoe
+                <br>-Irritabilidad, ira, preocupación, agitación, ansiedad
+                <br>-Pisimismo, indiferencia.
+                <br>-Pérdida de energía, letargo persistente.
+                <br>-Sentimientos de culpa.
+                <br>-Incapacidad para concentrarse, indecisión.
+                <br>-Tristeza prolongada.
+                </p>
 
             </div>
           </div>
