--- a/index.html
+++ b/index.html
@@ -337,12 +337,19 @@
               <div class="col-md-3 col-sm-6 col-xs-12">
                 <div class="service-item">
                   
-                  <h3>¿<span>Q</span>ué es la depresión?</h3>
-                  <p>La depresión es una afección grave y común que afecta la forma en la que te sientes,
-                    piensas y actúas pero no te preocupes es totalmente tratable.
-                    <br>Aunque típicamente se caracteriza por sentimientos de tristeza, los síntomas
-                    de depresión también pueden aparecer como irritabilidad, apatía o desinterés. Las tareas
-                    sencillas ahora pueden llevarte más tiempo debido a la falta de concentración.
+                  <h3>¿<span>Q</span>ué es la ansiedad</h3>
+                  <p>La ansiedad es el resultado el miedo. Cuando tenemos miedo nuestro
+                    cuerpo responde produciendo síntomas fisiológicos como palpitaciones
+                    del corazón, sudoración, temblores, falta de aliento, mareos y dolor
+                    o molestias en el pecho. Estos síntomas tienen a producir
+                    una respuesta de lucha o huida que hace que tomemos medidas
+                      para que podamos estar seguros.
+                      Debido a esto, a emnudo vemos individuos cuyas vidas se han
+                    vuelto significativamente limitadas debido a evitación de
+                    situaciones que les producen ansiedad.
+                    <br>Sin tratamiento, muchas veces los síntomas empeorarán
+                    perjudicando las áreas sociales, ocupacionales, vocacionales y
+                    otras áreas clave de la vida.
                     <br>Requisitos: No requiere evaluaciones previas.
                   </p>
     
