update banner tratamiento contra la ansiedad3

--- a/index.html
+++ b/index.html
@@ -357,19 +357,20 @@
               </div>
               <div class="col-md-3 col-sm-6 col-xs-12">
                 <div class="service-item">
-                  <h3><span>O</span>bjetivo de la terapia contra la depresión</h3>
-                  <p>Dar un tratamiento profesional a personas con síntomas
-                    de depresión que pueden incluir terapia psicológica
-                    psqiquiátrica, grupos de ayuda y cualquier tratamiento que
-                    tu terapeuta quiera probar. El tratamiento correcto es aquel
-                    que te sirve a ti.
+                  <h3><span>O</span>bjetivo de la terapia contra la ansiedad</h3>
+                  <p>El objetivo del tratamiento contra la ansiedad es cambiar
+                    los patrones de pensamiento que han impedido que superes tus
+                    miedos, así como ayudarte a entrar lentamente en contacto con 
+                    tus miedos. Este tratamiento es excepcionalmente efectivo y 
+                    produce resultados notables, permitiéndote enfrentar con éxito
+                    tus miedos, haciendo que la ansiedad se desvanezca gradualmente.
                   </p>
     
                 </div>
               </div>
               <div class="col-md-3 col-sm-6 col-xs-12">
                 <div class="service-item">
-                  <h3><span>S</span>intomas de depresión
+                  <h3><span>S</span>intomas de la ansiedad
                   ¿Cómo saber si tienes depresión?
                   </h3>
                   <p>La deperesión puede presentar algunos o todos los 
