--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
               <div class="col-md-3 col-sm-6 col-xs-12">
                 <div class="service-item">
                   <h3><span>S</span>intomas de la ansiedad
-                  <br>¿Cómo saber si tienes depresión?
+                  <br>¿Cómo saber si tienes ansiedad?
                   </h3>
                   <p>La deperesión puede presentar algunos o todos los 
                     siguientes síntomas durante más de dos semanas:
