update banner tratamiento contra la ansiedad4

--- a/index.html
+++ b/index.html
@@ -375,15 +375,17 @@
                   </h3>
                   <p>La deperesión puede presentar algunos o todos los 
                     siguientes síntomas durante más de dos semanas:
-                    <br>-Triteza prolognada.
-                    <br>-Llanto súbitos inexplicables.
-                    <br>-Cambios en el apetito y los patrones de sueñoe
-                    <br>-Irritabilidad, ira, preocupación, agitación, ansiedad
-                    <br>-Pisimismo, indiferencia.
-                    <br>-Pérdida de energía, letargo persistente.
-                    <br>-Sentimientos de culpa.
-                    <br>-Incapacidad para concentrarse, indecisión.
-                    <br>-Tristeza prolongada.
+                    <br>-Preocupación excesiva.
+                    <br>-Agitación.
+                    <br>-Inquietud.
+                    <br>-Fatiga.
+                    <br>-Dificultad para concentrarte
+                    <br>-Irritabilidad.
+                    <br>-Tensión muscular.
+                    <br>-Problemas para conciliar el sueño o permanecer dormido
+                    <br>-Ataques de pánico.
+                    <br>-Evitas situaciones sociales.
+                    <br>-Miedos irracionales.
                     </p>
     
                 </div>
