update banner inicio

--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@
           <div class="col-md-12 text-center">
             <h2 class="service-title pad-bt15">¿Cómo te podemos apoyar?</h2>
             <p class="sub-title pad-bt15">Cansado del confinaiento en casa
+              <br>Terapia para trabajar el luto ante la pérdida de un ser querido por Covid-19
               <br>Terapia especial para reducir el estrés, ansiedad, choque de caracteres con tu
               <br>familia por el encierro; atiéndete y libérate de esas presiones.</p>
             <hr class="bottom-line">
