update banner main

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <div class="row">
               <div class="banner-info text-center wow fadeIn delay-05s">
                 <h1 class="bnr-title">Atención Piscológica para todos<span></span></h1>
-                <h2 class="bnr-sub-title">Terapia Psicológica online y telefónica</h2>
+                <h2 class="bnr-sub-title">Terapia Psicológica online y presencial</h2>
                 
                 <p class="bnr-para"> Dr. Miguel Ángel Biciego Lozano
                   <br>Egresado de la Universidad Nacional Autónoma de México</p>
