--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
           </div>
           <div class="col-md-3 col-sm-6 col-xs-12">
             <div class="service-item">
-              <h3><span></span>Terapia:</h3>
+              <h3><span></span>TERAPIA:</h3>
               <p></p>
               <a href=""></a>
             </div>
