--- a/index.html
+++ b/index.html
@@ -138,10 +138,13 @@
         <div class="row">
           <div class="col-md-12 text-center">
             <h2 class="service-title pad-bt15">¿Cómo te podemos apoyar?</h2>
-            <p class="sub-title pad-bt15">Cansado del confinaiento en casa
-              <br>Terapia para trabajar el luto ante la pérdida de un ser querido por Covid-19
+            <p class="sub-title pad-bt15">¿Cansado del confinamiento en casa?
               <br>Terapia especial para reducir el estrés, ansiedad, choque de caracteres con tu
-              <br>familia por el encierro; atiéndete y libérate de esas presiones.</p>
+              <br>familia por el encierro; atiéndete y libérate de esas presiones.
+              <br>Resuelve tus problemas de estres, ansiedad, encierro por cuarentena, conductas adictivas, 
+              codependencia emociolan, violencia intrafamiliar entre otras.
+              <br>Terapia para trabajar el luto ante la pérdida de un ser querido por Covid-19
+            </p>
             <hr class="bottom-line">
           </div>
           <div class="col-md-3 col-sm-6 col-xs-12">
