update banner 2 agegar parrafo

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
               <br>Terapia especial para reducir el estrés, ansiedad, choque de caracteres con tu
               <br>familia por el encierro; atiéndete y libérate de esas presiones.
               <br>Resuelve tus problemas de estres, ansiedad, encierro por cuarentena, conductas adictivas, 
-              codependencia emociolan, violencia intrafamiliar entre otras.
+              codependencia emocional, violencia intrafamiliar entre otras.
               <br>Terapia para trabajar el luto ante la pérdida de un ser querido por Covid-19
             </p>
             <hr class="bottom-line">
