--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
           </div>
           <div class="col-md-3 col-sm-6 col-xs-12">
             <div class="service-item">
-              <h3><span></span>TERAPIA:</h3>
+              <h3><span>TERAPIA:</span></h3>
               <p></p>
               <a href=""></a>
             </div>
