--- a/index.html
+++ b/index.html
@@ -33,12 +33,13 @@
 </head>
 
 <body>
-  <!--HEADER-->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-  <a href="https://api.whatsapp.com/send?phone=527771491940&text=Manda%20un%20mensaje%20y%20con%20gusto%20te%20atenderemos" class="float" target="_blank">
-  <i class="fa fa-whatsapp my-float"></i> 
-  </a>
+
   <div class="loader"></div>
+    <!--Whatsapp-->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <a href="https://api.whatsapp.com/send?phone=527771491940&text=Manda%20un%20mensaje%20y%20con%20gusto%20te%20atenderemos" class="float" target="_blank">
+    <i class="fa fa-whatsapp my-float"></i> 
+    </a>
   <div id="myDiv">
     <!--HEADER-->
     <div class="header">
