Boton de whats2

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                   <br>Egresado de la Universidad Nacional Autónoma de México</p>
                 
                 <div class="brn-btn">
-                  <a href="https://api.whatsapp.com/send?phone=527771491940&text=Manda%20un%20mensaje%20y%20con%20gusto%20te%20atenderemos" class="btn btn-download">Haz tu cita en Whatsapp!</a>
+                  <a href="https://api.whatsapp.com/send?phone=527771491940&text=Manda%20un%20mensaje%20y%20con%20gusto%20te%20atenderemos" class="btn btn-download" target="_blank">Haz tu cita en Whatsapp!</a>
                 </div>
                 <div class="overlay-detail">
                   <a href="#feature"><i class="fa fa-angle-down"></i></a>
