--- a/index.html
+++ b/index.html
@@ -609,7 +609,7 @@
             <div class="contact-form">
               <div id="sendmessage">Your message has been sent. Thank you!</div>
               <div id="errormessage"></div>
-              <form action="enviar.php" method="post" role="form" class="contactForm">
+              <form action="enviar.php" method="POST" data-netlify="true" role="form" class="contactForm">
                 <div class="col-md-6 padding-right-zero">
                   <div class="form-group">
                     <input type="text" name="name" class="form-control" id="name" placeholder="Tu nombre" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
