--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
               <div class="item-img">
                 <img src="img/credit1.svg">
               </div>
-              <h3 class="pad-bt15">3. RECIBE UN TALÓN DE PAGO</h3>
-              <p>Elige dónde pagar: OXXO, Seven-11 o transferencia bancaria. Al liquidarlo recibiras la confirmación de tu cita</p>
+              <h3 class="pad-bt15">3. MODOS DE PAGO</h3>
+              <p>Transferencia bancaria o efectivo</p>
               
             </div>
           </div>
