Update section 1 Atención psicológica

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           <div class="container">
             <div class="row">
               <div class="banner-info text-center wow fadeIn delay-05s">
-                <h1 class="bnr-title">Atención Piscológica para todos<span></span></h1>
+                <h1 class="bnr-title">Atención Psicológica para todos<span></span></h1>
                 <h2 class="bnr-sub-title">Terapia Psicológica online y presencial</h2>
                 
                 <p class="bnr-para"> Dr. Miguel Ángel Biciego Lozano
