Update section 7 Si la tristaza la

--- a/index.html
+++ b/index.html
@@ -474,8 +474,8 @@
           </div>
           <div class="col-md-3 col-sm-6 col-xs-12">
             <div class="service-item">
-              <h3><span>S</span>i la tristeza, la </h3>
-              <p>culpa, los sentimientos de
+              <h3><span></span></h3>
+              <p>Si la tristeza, la culpa, los sentimientos de
                 inutilidad, la ansiedad, los pensamientos acelerados,
                 los problemas para dormir o
                 comer o cualquier otro síntoma han 
