Update images blog

--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
             <div class="blog-sec">
               <div class="blog-img">
                 <a href="">
-                  <img src="img/blog01.jpg" class="img-responsive">
+                  <img src="img/facetime1.jpg" class="img-responsive">
                 </a>
               </div>
               <div class="blog-info">
@@ -430,7 +430,7 @@
             <div class="blog-sec">
               <div class="blog-img">
                 <a href="">
-                  <img src="img/blog02.jpg" class="img-responsive">
+                  <img src="img/zoom.jpg" class="img-responsive">
                 </a>
               </div>
               <div class="blog-info">
@@ -447,7 +447,7 @@
             <div class="blog-sec">
               <div class="blog-img">
                 <a href="">
-                  <img src="img/blog03.jpg" class="img-responsive">
+                  <img src="img/whatsapp.jpg" class="img-responsive">
                 </a>
               </div>
               <div class="blog-info">
